[gd_scene load_steps=5 format=2]

[ext_resource path="res://Meshes/Shotgun/Bullet.gd" type="Script" id=1]
[ext_resource path="res://Materials/bark_M.tres" type="Material" id=2]

[sub_resource type="CylinderMesh" id=1]

[sub_resource type="CapsuleShape" id=2]

[node name="Bullet" type="Spatial"]

[node name="RigidBody" type="RigidBody" parent="."]
transform = Transform( 1.38778, 0, 0, 0, 1.38778, 0, 0, 0, 1.38778, 0, 0, 0 )
collision_layer = 2
collision_mask = 129
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="RigidBody"]
transform = Transform( 0.133518, 0, 0, 0, -5.83626e-09, -0.133518, 0, 0.133518, -5.83626e-09, 0, 0, 0 )
mesh = SubResource( 1 )
skeleton = NodePath("../..")
material/0 = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="RigidBody"]
transform = Transform( 0.156272, 0, 0, 0, 0.156272, 0, 0, 0, 0.156272, 0, 0, 0 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="RigidBody" to="RigidBody" method="_on_RigidBody_body_entered"]
[connection signal="timeout" from="Timer" to="RigidBody" method="_on_Timer_timeout"]
[connection signal="timeout" from="DespawnTimer" to="RigidBody" method="_on_DespawnTimer_timeout"]
